<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".InputActivity">

    <TextView
        android:id="@+id/textView2"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Players"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <RadioGroup
        android:id="@+id/players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2">

        <RadioButton
            android:id="@+id/single"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/single_player" />

        <RadioButton
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_players" />

        <RadioButton
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three_players" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/grid_size"
        app:layout_constraintTop_toBottomOf="@id/players"
        tools:layout_editor_absoluteX="16dp" />

    <RadioGroup
        android:id="@+id/gridSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3">

        <RadioButton
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four" />

        <RadioButton
            android:id="@+id/five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five" />

        <RadioButton
            android:id="@+id/six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/difficulty"
        app:layout_constraintTop_toBottomOf="@id/gridSize"
        tools:layout_editor_absoluteX="16dp" />

    <RadioGroup
        android:id="@+id/difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy" />

        <RadioButton
            android:id="@+id/hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard" />
    </RadioGroup>
    <Button
        android:onClick="go"
        android:layout_marginTop="36dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:background="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficulty" />

</androidx.constraintlayout.widget.ConstraintLayout>