<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#757575"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/textView8"
        app:fontFamily="sans-serif-light"
        android:paddingLeft="8dp"
        android:textSize="24sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/player1"
        android:textColor="@android:color/white"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="8dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView7"
        app:fontFamily="sans-serif-light"
        android:paddingRight="8dp"
        android:textSize="24sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/player2"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingEnd="8dp" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player3"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:fontFamily="sans-serif-light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player1Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="0"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:layout_marginStart="16dp" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/playerExtraScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="0"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/player2Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="0"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:layout_marginEnd="16dp" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <ImageButton
        android:onClick="undo"
        android:id="@+id/undo"
        android:visibility="gone"
        android:background="#757575"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/undo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="undo" />

</androidx.constraintlayout.widget.ConstraintLayout>